# git-graph

./: .gitignore  .travis.yml  Cargo.toml  Justfile  LICENSE  README.md  git-graph.toml.sample
.github/workflows/: crates-io.yml  release.yml  tests.yml
docs/: branch_assignment.md  manual.md
src/: branch_assignment.md  config.rs  graph.rs  lib.rs  main.rs  settings.rs  text.rs
src/print/: colors.rs  format.rs  mod.rs  svg.rs  unicode.rs
